2006-04-18  Paul J Stevens <paul@nfg.nl>

	* serverchild.c:
	catch failed forks
	* db.c, dbmail-message.c:
	add some db_free_result calls (kaname) (closes: #324)
	* sql/postgresql/create_tables.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.1.pgsql:
	fix the postgres creation and migration scripts for 
	datefield (kaname) (closes: #328)
	* NEWS, VERSION, debian/README.Debian, debian/changelog, debian/control, 
	  debian/dbmail-dev.files, debian/dbmail-ldap.examples, 
	  debian/dbmail-ldap.files, debian/dbmail-mysql.examples, 
	  debian/dbmail-mysql.files, debian/dbmail-pgsql.examples, 
	  debian/dbmail-pgsql.files, debian/dbmail-sieve.files, 
	  debian/dbmail-sqlite.examples, debian/dbmail-sqlite.files, 
	  debian/dbmail2.2-dev.files, debian/libdbmail-ldap.examples, 
	  debian/libdbmail-ldap.files, debian/libdbmail-mysql.examples, 
	  debian/libdbmail-mysql.files, debian/libdbmail-pgsql.examples, 
	  debian/libdbmail-pgsql.files, debian/libdbmail-sieve.files, 
	  debian/libdbmail-sqlite.examples, debian/libdbmail-sqlite.files, 
	  debian/rules:
	cleaning up the debian packaging
	* debian/dbmail-mysql.examples, debian/dbmail-pgsql.examples, 
	  debian/dbmail.substvars, 
	  sql/postgresql/add_auto_replies_fields.pgsql, 
	  sql/postgresql/add_header_tables.pgsql, 
	  sql/postgresql/add_replycache.pgsql, 
	  sql/postgresql/add_sieve_tables.pgsql, 
	  sql/postgresql/add_usermap.psql, sql/postgresql/create_tables.pgsql, 
	  sql/postgresql/migrate_2.0_to_2.1.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.1.pgsql:
	cleaning up the debian packages
	* NEWS:
	re-add empty file
	* pool.h:
	increase HARD_MAX_CHILDREN
	* debian/control, debian/dbmail-mysql.examples, debian/dbmail.postrm:
	debian package cleanup
	* sql/sqlite/create_tables.sqlite:
	update sqlite create_tables file
	* dbmail-message.c:
	only look for From_ at the first line of a message (closes: #326).
	* serverchild.c:
	do _exit if child_register failes. This needs more work.