@@ -85,7 +85,6 @@
 #include "imap4.h"
 #include "imapcommands.h"
 #include "memblock.h"
-#include "forward.h"
 #include "dbmd5.h"
 #include "md5.h"
 #include "server.h"
